# paradoxGameConverters

./: .gitignore
CK2ToEU3/: CMakeLists.txt  CopyUIFiles.bat  Copy_Files.bat  test.bat  test_all_configs.bat  test_all_saves.bat
CK2ToEU3/Data Files/: culture_mappings.txt  landed_title_migrations.txt
CK2ToEU3/Source/: CMakeLists.txt  Configuration.cpp  Convert.cpp  Date.cpp  Log.cpp  Log.h  LogBase.h  mappers.cpp
CK2ToEU3/Source/CK2World/: CK2Army.cpp  CK2Barony.cpp  CK2Building.cpp  CK2Character.cpp  CK2Character.h  CK2Dynasty.cpp  CK2History.h  CK2Opinion.cpp  CK2Opinion.h  CK2Province.cpp  CK2Province.h  CK2Religion.cpp  CK2Religion.h  CK2Title.cpp  CK2Title.h  CK2War.cpp  CK2World.cpp  CK2World.h  Ck2History.cpp
CK2ToEU3/Source/CK2World/Character/: CK2Character.cpp  CK2Character.h  Demesne.cpp
CK2ToEU3/Source/CK2World/Opinion/: CK2Opinion.cpp  CK2Opinion.h
CK2ToEU3/Source/EU3World/: EU3Advisor.cpp  EU3Country.cpp  EU3Country.h  EU3History.cpp  EU3Province.cpp  EU3Ruler.cpp  EU3Tech.cpp  EU3World.cpp  EU3World.h
CK2ToEU3/Source/Parsers/: IObject.h  Object.cpp  Object.h  Parser.cpp  Parser.h
CK2ToEU3/Test/: CMakeLists.txt
CK2ToEU3/Test/CK2World/: CK2CharacterTests.cpp  CK2HistoryTests.cpp  CK2TitleTests.cpp  CK2WorldTests.cpp
CK2ToEU3/Test/CK2World/Character/: CK2CharacterTests.cpp
CK2ToEU3/Test/Helpers/: ObjectDataHelper.h
CK2ToEU3/Test/Mocks/: LoggerMock.h  ObjectMock.h
CK2ToEU3/Test/Mocks/CK2World/: CK2OpinionRepositoryMock.h
CK2ToEU3/Test/Parsers/: LandedTitleMigrationsParserTests.cpp  ParserTests.cpp
CK2ToEU3/UI/: UI.csproj
EU4toV2/: EU4ToV2-VS2013.vcxproj  Makefile
EU4toV2/Source/: Configuration.cpp  CountryMapping.cpp  Date.cpp  EU4toV2Converter.cpp  Log.cpp  Mapper.cpp  Mapper.h  WinUtils.cpp
EU4toV2/Source/EU4World/: EU4Army.cpp  EU4Country.h  EU4Leader.cpp  EU4Loan.cpp  EU4Localisation.cpp  EU4Relations.cpp  EU4Version.cpp  EU4Version.h  EU4World.cpp
EU4toV2/Source/Parsers/: Object.cpp  Parser.cpp
EU4toV2/Source/V2World/: V2Army.cpp  V2Country.cpp  V2Country.h  V2Creditor.cpp  V2Diplomacy.cpp  V2Factory.cpp  V2Flags.cpp  V2Inventions.h  V2Leader.cpp  V2LeaderTraits.cpp  V2Localisation.cpp  V2Pop.cpp  V2Province.cpp  V2Reforms.cpp  V2Reforms.h  V2Relations.cpp  V2State.cpp  V2TechSchools.cpp  V2World.cpp
